@@ -1,6 +1,7 @@
 'use strict'
 
 exports['test valueOf, isPromise, isResolved'] = require('./value-of');
+exports['test reject'] = require('./reject');
 exports['test asap'] = require('./asap');
 exports['test rosolve & reject'] = require('./resolve-reject')
 exports['test chains of promises'] = require('./promised-chains')
